增加订单检查

--- a/config/config.json
+++ b/config/config.json
@@ -22,7 +22,7 @@
     "smtpUser": "260946758@qq.com",
     "smtpPass": "fugpgunzgmnabgjd",
     "from": "260946758@qq.com",
-    "to": ["nephilo@live.cn","516000887@qq.com"]
+    "to": ["260946758@qq.com"]
   },
 
   "browser": {
