--- a/main-app/package.json
+++ b/main-app/package.json
@@ -40,6 +40,7 @@
     "jsonwebtoken": "^9.0.2",
     "lowdb": "^7.0.1",
     "multer": "^2.0.2",
+    "node-cache": "^5.1.2",
     "node-cron": "^4.2.1",
     "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.5",
